--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /nbproject/private/
 *.properties
 login/.gitkeep
+*.properties
+nbproject/project.properties
+nbproject/project.properties
+*.properties
+nbproject/project.properties
+*.properties
