Updated HTAccess Error document

--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,9 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.+)$ index.php [QSA,L]
 Options -Indexes
+ErrorDocument 403 /ICT1004-Project/error
+
+
 
 #RewriteEngine On
 #RedirectMatch ^/$ /ICT1004-Project/
